Add GridFS methods & refactoring

--- a/src/error.html
+++ b/src/error.html
@@ -8,6 +8,6 @@
     <h1>Hold on! En error has occured.</h1>
     <h2>Status: %sveltekit.status%</h2>
     <p>Message: %sveltekit.error.message%</p>
-    <a href="/">Go back</a>
+    <a href="/">Go home</a>
   </body>
 </html>
